--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -9,7 +9,7 @@
 
     - name: Install Vundle.
       git:
-        repo: "{{ basics_vim_vundle_repo }}"
+        repo: "{{ sysbasics_vim_vundle_repo }}"
         dest: "~{{ sysbasics_username }}/.vim/bundle/Vundle.vim"
 
     - name: Install vim plugins.
