--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,7 @@ sysbasics_pkgs:
 
 sysbasics_desktop_pkgs: []
 
+sysbasics_username: "{{ ansible_user_id }}"
 
 ##### SHELL ###################################################
 ###############################################################
